objects/LPDCR_ExpenseSort__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Expense Sorting</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SortByField_API__c</fullName>
        <label>SortByField API</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortBySubField_API__c</fullName>
        <label>SortBySubField API</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_By_Field__c</fullName>
        <label>Sort By Field</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_By_SubField__c</fullName>
        <label>Sort By SubField</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>LPDCR_ExpenseSort</label>
</CustomObject>